operator/gitops/argocd/pipeline-service/tekton-results/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tekton-results
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  annotations:
    argocd.argoproj.io/sync-wave: "0"
