operator/gitops/argocd/pipeline-service/tekton-results/api-db-config.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-results-api
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  template:
    spec:
      containers:
        - name: api
          volumeMounts:
            - name: db-tls-ca
              mountPath: /etc/tls/db
              readOnly: true
      volumes:
        - name: db-tls-ca
          configMap:
            name: rds-root-crt
