operator/gitops/argocd/pipeline-service/tekton-results/api-migrator-config.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-results-api
  namespace: tekton-pipelines
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  template:
    spec:
