operator/gitops/argocd/pipeline-service/tekton-results/api-resources-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-results-api
spec:
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: 1000m
              memory: 500Mi
            limits:
              memory: 1000Mi
              cpu: null
