operator/gitops/argocd/pipeline-service/tekton-results/api-s3-config.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-results-api
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: 5m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 512Mi
          securityContext:
            readOnlyRootFilesystem: true
