operator/gitops/argocd/pipeline-service/tekton-results/retention-policy-agent-sync.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-results-retention-policy-agent
  annotations:
    argocd.argoproj.io/sync-wave: "2"
