operator/gitops/argocd/pipeline-service/tekton-results/watcher-config.yaml
# Adjusting args to tekton-results namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-results-watcher
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/os
                    operator: NotIn
                    values:
                      - windows
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: tekton-results-watcher
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: watcher
          args:
            [
              "-api_addr",
              "tekton-results-api-service.tekton-results.svc.cluster.local:8080",
              "-auth_mode",
              "token",
              "-check_owner=false",
              "-completed_run_grace_period",
              "10m",
              "-logs_api=true"
            ]
          resources:
            requests:
              cpu: 250m
              memory: 2Gi
            limits:
              cpu: 250m
              memory: 2Gi
          securityContext:
            readOnlyRootFilesystem: true
