operator/gitops/argocd/pipeline-service/tekton-results/watcher-kube-rbac-proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-results-watcher
  namespace: tekton-pipelines
spec:
  template:
    spec:
      containers:
        - name: kube-rbac-proxy
          image: registry.redhat.io/openshift4/ose-kube-rbac-proxy:v4.12
          args:
            - "--secure-listen-address=0.0.0.0:8443"
            - "--upstream=http://127.0.0.1:9090/"
            - "--logtostderr=true"
            - "--v=10"
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8443
              protocol: TCP
              name: watchermetrics
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 5m
              memory: 64Mi
