operator/gitops/argocd/pipeline-service/tekton-results/watcher-sync.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-results-watcher
  annotations:
    argocd.argoproj.io/sync-wave: "2"
