operator/gitops/argocd/pipeline-service/tekton-results/api-service-sync.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: tekton-pipelines
  annotations:
    argocd.argoproj.io/sync-wave: "1"
