operator/gitops/argocd/pipeline-service/tekton-results/watcher-service-sync.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tekton-results-watcher
  namespace: tekton-pipelines
  annotations:
    argocd.argoproj.io/sync-wave: "2"
